--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 html {
-  background: url(../assets/sky_bg.jpg) no-repeat center center fixed;
+  background: url(../assets/sky_bg_2.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -7,7 +7,9 @@ html {
 }
 
 .rainbow-text {
-  background-image: linear-gradient(to left, violet, #b0aac0, #87bdd8, #96ceb4, #ffcc5c, orange, #d96459);
+  /* background-image: linear-gradient(to left, violet, #b0aac0, #87bdd8, #96ceb4, #ffcc5c, orange, #d96459); */
+  background-image: linear-gradient(to left,  #ffcc5c, orange, violet, #d96459);
+
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
